<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_color_picker"
        android:icon="@drawable/ic_action_brush"
        android:title="@string/action_brush"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/action_color_white"
                android:title="@string/action_color_white"
                android:icon="@drawable/ic_circle_white"/>

            <item
                android:id="@+id/action_color_black"
                android:title="@string/action_color_black"
                android:icon="@drawable/ic_circle_black"/>

            <item
                android:id="@+id/action_color_blue"
                android:title="@string/action_color_blue"
                android:icon="@drawable/ic_circle_blue"/>

            <item
                android:id="@+id/action_color_red"
                android:title="@string/action_color_red"
                android:icon="@drawable/ic_circle_red"/>
        </menu>
    </item>


</menu>